--- a/test/integration/web/index.html
+++ b/test/integration/web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   	<meta charset="utf-8">
-    <title>Sandbox Purity</title>
+    <title>Purity OAuth2 Test</title>
     <style>
       html, body {
         position: relative;
