--- a/without_purity/index.html
+++ b/without_purity/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
   	<meta charset="utf-8">
@@ -16,7 +16,7 @@
       }
     </style>
     <script type="application/dart" src="index_without_purity.dart"></script>
-    <script src="packages/browser/dart.js"></script>
+    <script src="../packages/browser/dart.js"></script>
   </head>
   <body>
   </body>
